crates/rascal/src/snapshots/rascal__tests__all_samples@with.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/with.as
---
initializer:
  actions:
    - ConstantPool:
        - foo
        - createEmptyMovieClip
        - ""
        - _name
    - Push:
        - Integer: 1
        - Constant: 0
        - Integer: 2
        - Constant: 1
    - CallFunction
    - Pop
    - Push:
        - Constant: 2
        - Integer: 13
    - GetProperty
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - With:
        actions:
          - Push:
              - Constant: 3
          - GetVariable
          - Trace
        label_positions: {}
    - Push:
        - Constant: 0
    - GetVariable
    - With:
        actions:
          - Push:
              - Constant: 3
          - GetVariable
          - Trace
        label_positions: {}
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
